# mne-faster

./: LICENSE  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: unit-tests.yml
examples/: plot_artifact_correction_with_faster.py
mne_faster/: __init__.py  faster.py
tests/: test_faster.py
